@@ -159,6 +159,7 @@ Chronological list of authors
   - Jan Stevens
   - Orion Cohen
   - Dimitrios Papageorgiou
+  - Hannah Pollak
 
 External code
 -------------
